crates/ir/tests/ir/snapshots/main__ir__lower__resources__resource_recur.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module resources__resource_recur

type Handle = MkHandle#0(Int)
instance core/resource.Resource[Handle] { close=Resource$$Handle$$close }
extern java "krypton.runtime.KryptonIO" println(a8) -> Unit
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare println: (a8) -> Unit

fn loop(v0: Int) -> Unit =
  let_join [recur] v1(v2: Int) =
    let_join v13(v6: Bool) =
      if v6 {
        let v7: Unit = call println("done")
        v7
      } else {
        let v8: ~Handle = construct Handle::MkHandle#0(v2)
        let v9: Unit = call println("iter")
        let v10: Int = add_int(v2, 1)
        let v11: Dict[core/resource.Resource, Handle] = get_dict core/resource.Resource[Handle]
        auto_close[Handle](v8, dict=v11, null=true)
        jump v1(v10)
      }
    in
    let v3: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
    let v4: Bool = trait_call core/ord.Ord.lt(v3, v2, 3)
    let v5: Bool = not(v4)
    jump v13(v5)
  in
  jump v1(v0)

fn main() -> Unit =
  let v14: Unit = call loop(0)
  v14

fn Resource$$Handle$$close(v15: ~Handle) -> Unit =
  let v16: Unit = call println("closed")
  v16
