crates/ir/tests/ir/snapshots/main__ir__lower__resources__resource_shadow.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module resources__resource_shadow

type Handle = MkHandle#0(String)
instance core/resource.Resource[Handle] { close=Resource$$Handle$$close }
extern java "krypton.runtime.KryptonIO" println(a8) -> Unit
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare println: (a8) -> Unit

fn main() -> Unit =
  let v0: ~Handle = construct Handle::MkHandle#0("1")
  let v1: Unit = call println("open1")
  let v2: ~Handle = construct Handle::MkHandle#0("2")
  let v4: Dict[core/resource.Resource, Handle] = get_dict core/resource.Resource[Handle]
  auto_close[Handle](v0, dict=v4, null=true)
  let v3: Unit = call println("open2")
  let v5: Dict[core/resource.Resource, Handle] = get_dict core/resource.Resource[Handle]
  auto_close[Handle](v2, dict=v5, null=true)
  v3

fn Resource$$Handle$$close(v6: ~Handle) -> Unit =
  let v7: Unit = call println("closed")
  v7
